# lazyboy

./: .gitignore  Cargo.toml  Makefile  lazyboy.json
DOCS/: GOOSE-ACP.md  GOOSE-FEATURES.md  IDEA-V2.md  IDEA-V3-SPIKE.md  IDEA-V3.md  IDEA.md  INGRESS.md  SCOPE.md  TERMINOLOGY.md  WORKFLOWS.md  ZENOH.md
crates/lazyboy-adapters-host/: Cargo.toml
crates/lazyboy-adapters-host/src/: client.rs  conn.rs  lib.rs  scheduler.rs  wire.rs
crates/lazyboy-adapters-host/src/goose/: catalog.rs  config.rs  mod.rs  supervisor.rs
crates/lazyboy-adapters-host/tests/: fake_server_test.rs  live_handshake_test.rs  scheduler_test.rs
crates/lazyboy-adapters-host/tests/support/: fake_acp_server.rs
crates/lazyboy-bridge/: Cargo.toml
crates/lazyboy-bridge/src/: error.rs  lib.rs
crates/lazyboy-bridge/src/acp/: client.rs  decision.rs  fake.rs  mod.rs  permission.rs  session_id.rs  tool_call.rs  update.rs
crates/lazyboy-bridge/src/import/: artifact.rs  context.rs  mod.rs  outcome.rs  update.rs
crates/lazyboy-cli/: Cargo.toml
crates/lazyboy-cli/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
crates/lazyboy-cli/tests/: approval_flow_test.rs
crates/lazyboy-cli/tests/support/: fake_acp_server.rs
crates/lazyboy-core/: Cargo.toml
crates/lazyboy-core/src/: cancel_run.rs  drive.rs  engine.rs  error.rs  lib.rs  reconcile.rs  resolve_approval.rs  retry_run.rs  run_workflow.rs  schedule_tick.rs  start_run.rs  workflow_agent.rs
crates/lazyboy-core/tests/: one_space_slice_test.rs  schedule_tick_test.rs  workflow_test.rs
crates/lazyboy-ingress/: Cargo.toml
crates/lazyboy-ingress/src/: binding.rs  error.rs  event.rs  github.rs  gmail.rs  lib.rs
crates/lazyboy-server/: Cargo.toml
crates/lazyboy-server/src/: auth.rs  error.rs  lib.rs  main.rs  state.rs  wire.rs
crates/lazyboy-server/src/mcp/: mod.rs  space.rs  tools.rs
crates/lazyboy-server/src/routes/: add_group_member.rs  create_group.rs  create_integration.rs  create_reminder.rs  create_space.rs  create_task.rs  create_workflow.rs  decide.rs  dismiss_reminder.rs  fire_workflow.rs  goose_settings.rs  grant_membership.rs  health.rs  ingress.rs  list_calendar.rs  list_decisions.rs  list_integrations.rs  list_members.rs  list_pending.rs  list_reminders.rs  list_runs.rs  list_spaces.rs  list_tasks.rs  list_workflows.rs  mod.rs  record_decision.rs  set_feed_visibility.rs  set_workflow_status.rs  start_run.rs  subscribe.rs  timeline.rs  upsert_calendar.rs
crates/lazyboy-server/tests/: durable_memory.rs  ingress.rs  mcp.rs  spaces.rs  tasks.rs  workflows.rs
crates/lazyboy-store/: Cargo.toml
crates/lazyboy-store/src/: error.rs  lib.rs  open.rs
crates/lazyboy-store/src/migrations/: 0001_timeline.sql  0002_domain.sql  0003_workflows.sql
crates/lazyboy-store/src/repo/: clock.rs  mod.rs
crates/lazyboy-store/src/repo/approval/: audit_of.rs  deny_pending_for_run.rs  get.rs  list_pending.rs  mod.rs  needs_resume.rs  pending_for_run.rs  queue.rs  request.rs  resolve.rs
crates/lazyboy-store/src/repo/artifact/: create.rs  list.rs  mod.rs
crates/lazyboy-store/src/repo/bootstrap/: create_identity.rs  create_space.rs  create_workspace.rs  mod.rs
crates/lazyboy-store/src/repo/calendar/: list.rs  mod.rs  upsert.rs
crates/lazyboy-store/src/repo/decision/: list.rs  mod.rs  record.rs
crates/lazyboy-store/src/repo/identity/: find_by_kind.rs  mod.rs
crates/lazyboy-store/src/repo/ingress/: ingest.rs  list.rs  mod.rs
crates/lazyboy-store/src/repo/integration/: create.rs  get.rs  list.rs  mod.rs
crates/lazyboy-store/src/repo/membership/: add_member.rs  create_group.rs  grant_membership.rs  list_groups.rs  list_members.rs  list_memberships.rs  list_visibility.rs  mod.rs  set_feed_visibility.rs
crates/lazyboy-store/src/repo/message/: append.rs  list.rs  mod.rs
crates/lazyboy-store/src/repo/outbox/: append.rs  mark_synced.rs  mod.rs  unsynced.rs
crates/lazyboy-store/src/repo/reminder/: create.rs  due.rs  get.rs  list.rs  mod.rs  set_status.rs
crates/lazyboy-store/src/repo/run/: append_event.rs  create.rs  event_count.rs  get.rs  list.rs  mod.rs  prompt_of.rs  set_session.rs  set_status.rs
crates/lazyboy-store/src/repo/space/: list.rs  mod.rs
crates/lazyboy-store/src/repo/task/: attach_run.rs  create.rs  get.rs  list.rs  mod.rs  set_state.rs
crates/lazyboy-store/src/repo/workflow/: create.rs  enabled_schedules.rs  get.rs  list.rs  list_runs.rs  mod.rs  record_run.rs  set_status.rs
crates/lazyboy-store/src/repo/workspace/: current.rs  mod.rs
crates/lazyboy-store/src/row/: approval.rs  artifact.rs  calendar_event.rs  decision.rs  decode.rs  feed_visibility.rs  group.rs  ingress_event.rs  integration.rs  message.rs  mod.rs  outbox_event.rs  reminder.rs  run.rs  space.rs  space_membership.rs  task.rs  workflow.rs  workflow_run.rs
crates/lazyboy-store/tests/: durable_memory_test.rs  ingress_test.rs  migration_test.rs  outbox_test.rs  timeline_test.rs  workflow_test.rs
crates/lazyboy-sync/: Cargo.toml
crates/lazyboy-sync/src/: apply.rs  config.rs  drain.rs  error.rs  event.rs  inbound.rs  lib.rs  merge.rs  session.rs
crates/lazyboy-sync/tests/: pure_test.rs
crates/lazyboy-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/lazyboy-tauri/src/: app.rs  error.rs  handle.rs  lib.rs  subscribe.rs
crates/lazyboy-tauri/tests/: commands.rs
crates/lazyboy-types/: Cargo.toml
crates/lazyboy-types/src/: id.rs  lib.rs
crates/lazyboy-types/src/domain/: approval_policy.rs  approval_status.rs  marker.rs  message_kind.rs  mod.rs  provider.rs  reminder_status.rs  run_status.rs  schedule_trigger.rs  task_state.rs  trigger_kind.rs  workflow_status.rs
crates/lazyboy-wire/: Cargo.toml
crates/lazyboy-wire/src/: lib.rs
testing/: README.md  package.json  playwright.config.ts  reminders.spec.ts
ui/lazyboy-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/lazyboy-ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/lazyboy-ui/src/components/: ApprovalCard.tsx  CalendarPanel.tsx  DecisionsPanel.tsx  GooseSettings.tsx  GooseStatus.tsx  (+10 more)
(+11 files in other folders)
