# Lazyboy workspace. Product layer over a rented, unforked Goose
# (SCOPE.md). Crate roles and the iOS/Android-safe split mirror the
# codeless discipline: process spawn and the Goose seam live host-side
# only; -types is the mobile-safe wire layer.
[workspace]
resolver = "2"
members = [
    "crates/lazyboy-types",
    "crates/lazyboy-store",
    "crates/lazyboy-bridge",
    "crates/lazyboy-core",
    "crates/lazyboy-adapters-host",
    "crates/lazyboy-cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "time", "uuid"] }
async-trait = "0.1"
tracing = "0.1"

lazyboy-types = { path = "crates/lazyboy-types" }
lazyboy-store = { path = "crates/lazyboy-store" }
lazyboy-bridge = { path = "crates/lazyboy-bridge" }
lazyboy-core = { path = "crates/lazyboy-core" }
lazyboy-adapters-host = { path = "crates/lazyboy-adapters-host" }
