# Ingress normalization: provider webhook/poll payloads (serde_json
# Value) into a transport-free normalized event the store's ingest verb
# consumes (SCOPE.md "Integrations as ingress"). Pure Value-in /
# struct-out by design — no process, socket, or HTTP deps — so it stays
# inside the mobile-safe crate graph (codeless R1). Live API fetching
# and OAuth are out of MVP scope here; see DOCS/INGRESS.md.
[package]
name = "lazyboy-ingress"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyboy-types.workspace = true
serde.workspace = true
serde_json.workspace = true
