# SQLite source of truth (R1). Host-only: owns the sqlx pool and the
# timeline schema. Repos are verb-per-file under src/repo/.
[package]
name = "lazyboy-store"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyboy-types.workspace = true
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
